fixed nav bar elements and made code more readable

--- a/OuiWebsite/css/style.css
+++ b/OuiWebsite/css/style.css
@@ -81,7 +81,7 @@ nav{
 }
 
 
-.main li a{
+header li a{
     font-family: CaveatBold;
     color: #FBEED7;
     text-decoration: none;
